test/negative/multiple_same_outputs.net
INPUT a
OUTPUT b, b
VAR a, b
IN
b = NOT a
